--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -143,6 +143,7 @@
   .btn{
     width:70%;
     margin-right:0;
+    white-space:nowrap;
   }
   .btn-top{
     margin-bottom:10px;
